# FilesObserver

./: CMakeLists.txt
FilesObserver/: CMakeLists.txt  FilesObserver.cpp  FilesObserver.h
files_observer/: CMakeLists.txt
files_observer/src/: main.cpp
files_observer/src/arguments_parser/: arguments_parser.cpp  arguments_parser.h
test/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
